# pyspark_pipeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
docker/cloud-developer-image/: Dockerfile
docker/local-developer-image/: Dockerfile
docker/spark-on-kubernetes-launcher-image/: Dockerfile  Makefile  README.md
kubernetes/pod_templates/: cpu-expensive.yml  cpu.yml  cpu_1_hour_run.yml  cpu_3_hour_run.yml  cpu_5_hour_run.yml  cpu_8_hour_run.yml  mem-expensive.yml  mem.yml
kubernetes/pvc_templates/: s3_staging.yaml
project_templating/: README.md  project_settings.yaml  render_project_files.py
project_templating/templates/: fixtures.jinja  job.jinja  job_test.jinja  main.jinja  query.jinja  query_test.jinja  schema.jinja  settings.jinja
scripts/: cluster_submit.sh  get_s3_file_names_as_empty_files.py
settings/: sample_settings.yaml
src/pyspark_pipeline/: archive_conda_environment.py  print_bucket_name_for_spark_submit.py  print_spark_configs_for_spark_submit.py  sample.py
tests/: conftest.py  test_print_bucket_name_for_spark_submit.py  test_print_spark_configs_for_spark_submit.py  test_queries_fixtures.py  test_sample_queries_fixtures.py  test_subset_queries_fixtures.py
tests/data/: aws_test_settings.yaml  test_override_settings.yaml  test_settings.yaml
tests/test_jobs/: test_jobs.py  test_sample_job.py
tests/test_queries/: test_queries.py  test_sample_queries.py  test_subset_source_tables_queries.py  test_subset_tables_queries.py
tests/test_schemas/: test_schemas.py
tests/test_utilities/: test_job_utils.py  (+6 more)
(+16 files in other folders)
